<resources>
    <string name="app_name">MCab</string>
    <string name="copyright">Trung tâm Hạ Tầng Viễn Thông\n© 2020 VTVcab</string>
    <string name="btn_info">Thông tin</string>
    <string name="btn_rate">Bình chọn</string>
    <string name="btn_start">Bắt đầu</string>
    <string name="btn_docsis">Hệ thống Monitor Docsis</string>
    <string name="btn_gpon">Hệ thống Monitor GPON</string>
    <string name="btn_word">Các nhóm từ thường sử dụng trong đời sống</string>
    <string name="btn_byword">Thành ngữ tục ngữ</string>
    <string name="btn_listening">Lắng nghe</string>
    <string name="btn_searching">Tra từ</string>
    <string name="txt_searching">Nhập vào nội dung cần tra cứu..</string>
    <string name="txt_vietnamese_name">Nhập vào tên tiếng Việt của bạn</string>
    <string name="txt_chinese_name">Tên tiếng Trung của bạn</string>
    <string name="txt_spelling_name">Phiên âm tên tiếng Trung của bạn</string>
    <string name="btn_get_name">Dịch sang tiếng Trung</string>
    <!--    <string name="AppID">ca-app-pub-6535818699332550~9068139417</string>-->
    <!--    <string name="Ad_Banner">ca-app-pub-6535818699332550/1235797145</string>-->
    <string name="AppID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Ad_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="txt_email">Địa chỉ email do VTVcab cấp</string>
    <string name="txt_password">Mật khẩu đăng nhập</string>
    <string name="txt_welcome">Chào mừng bạn đến với hệ thống của Trung tâm Hạ tầng Viễn thông</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="btn_get">Lấy thông tin</string>
    <string name="btn_clear">Xóa trắng</string>
    <string name="btn_detail">Xem chi tiết</string>
    <string name="btn_confirm_popup">Xác nhận</string>
    <string name="title_activity_upstream_his">UpstreamHisActivity</string>
    <string name="title_activity_gpon">gpon</string>
    <string name="title_drawer_1"><font fgcolor="#2264cf">Cảnh Báo Tín Hiệu</font></string>
    <string name="title_drawer_mb"><font fgcolor="#2264cf">Hệ Thống Giám Sát Miền Bắc</font></string>
    <string name="title_drawer_mn"><font fgcolor="#2264cf">Hệ Thống Giám Sát Miền Nam</font></string>
    <string name="title_drawer_2"><font fgcolor="#2264cf">Quản Lý Hệ Thống</font></string>
    <string name="title_drawer_3"><font fgcolor="#2264cf">Thông Tin Người Dùng</font></string>
    <string name="title_drawer_4"><font fgcolor="#2264cf">Thông Tin Hỗ Trợ</font></string>
    <string name="title_drawer_map_quanly"><font fgcolor="#2264cf">Công cụ quản lý</font></string>
    <string name="title_drawer_map_update"><font fgcolor="#2264cf">Công cụ cập nhật</font></string>
    <string name="title_infor_ticket">Thông Tin Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Giám sát hạ tầng mạng GPON</string>
    <string name="nav_header_title_docsis">Giám sát hạ tầng mạng Docsis</string>
    <string name="nav_header_title_docsis_mn">Monitor Docsis Miền Nam</string>
    <string name="nav_header_map_docsis">Giám sát bản đồ hạ tầng mạng Docsis</string>
    <string name="nav_header_subtitle">Trung tâm Hạ Tầng Viễn Thông</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_canhbaoonu">Cảnh báo ONU</string>
    <string name="menu_follow_onu">Theo dõi ONU</string>
    <string name="menu_ticket">Ticket Gpon</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_olt">Quản lý OLT</string>
    <string name="menu_onu">Quản lý ONU</string>
    <string name="menu_support">Support System</string>
    <string name="menu_sigout">Đăng Xuất</string>
    <string name="menu_home">Danh mục hệ thống</string>
    <string name="menu_maping_nhanh">Bản đồ sự cố nhánh</string>
    <string name="menu_maping_capnhat_cm">Cập nhật thông tin CM</string>
    <string name="menu_maping_capnhat_dokiem">Cập nhật thông tin đo kiểm</string>

    <string-array name="tools_array">
        <item>PPPoE</item>
        <item>Tín Hiệu</item>
        <item>Hợp Đồng</item>
        <item>Lịch Sử</item>
    </string-array>
    <string name="title_activity_layout_ticket">layout_ticket</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_docsis_mb">docsis_mb</string>
    <string name="menu_node">Thông tin Node</string>
    <string name="menu_cablemodem">Thông tin CM </string>
    <string name="menu_send">Tài liệu hướng dẫn</string>
    <string name="menu_ticket_gpon">Ticket GPON</string>
    <string name="title_activity_maping_docsis">maping_docsis</string>
</resources>
