<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_canhbaoonu">

    <fragment
        android:id="@+id/nav_canhbaoonu"
        android:name="com.example.monitordocsis.ui.gpon.fragment_canhbao_onu"
        android:label="@string/menu_canhbaoonu"
        tools:layout="@layout/fragment_canhbaoonu" />
    <fragment
        android:id="@+id/nav_follow_onu"
        android:name="com.example.monitordocsis.ui.theodoionu.FragmentFollowOnu"
        android:label="@string/menu_follow_onu"
        tools:layout="@layout/fragment_follow_onu" />
    <fragment
        android:id="@+id/nav_ql_olt"
        android:name="com.example.monitordocsis.ui.quanlyolt.FragmentQuanlyOLT"
        android:label="@string/menu_olt"
        tools:layout="@layout/fragment_quanly_olt" />

    <fragment
        android:id="@+id/nav_ql_onu"
        android:name="com.example.monitordocsis.ui.quanlyonu.FragmentQuanlyOnu"
        android:label="@string/menu_onu"
        tools:layout="@layout/fragment_quanly_onu" />
    <fragment
        android:id="@+id/nav_email_support"
        android:name="com.example.monitordocsis.ui.support.FragmentEmailSupport"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_email_support" />
    <fragment
        android:id="@+id/nav_ticket"
        android:name="com.example.monitordocsis.ui.ticket.FragmentTicket"
        android:label="@string/menu_ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/nav_ticket_tab"
        android:name="com.example.monitordocsis.ui.ticket.layoutTabTicket"
        android:label="@string/menu_ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/nav_gpon_doc"
        android:name="com.example.monitordocsis.ui.document.FragmentGPONDoc"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_ticket_gpon"
        android:name="com.example.monitordocsis.ui.ticket.FragmentTicketGpon"
        android:label="@string/menu_ticket_gpon"
        tools:layout="@layout/fragment_ticket_gpon" />

</navigation>