<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/id_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    <group android:checkableBehavior="single">
        <item android:title="@string/title_drawer_mb"
            android:id="@+id/id_menu_mb">
            <menu>
                <item
                    android:id="@+id/nav_node_mb"
                    android:icon="@drawable/ic_device_hub_black_24dp"
                    android:title="@string/menu_node" />
                <item
                    android:id="@+id/nav_cm_mb"
                    android:icon="@drawable/icon_onu"
                    android:title="@string/menu_cablemodem" />

            </menu>
        </item>
        <item android:title="@string/title_drawer_mn"
            android:id="@+id/id_menu_mn">
            <menu>
                <item
                    android:id="@+id/nav_node_mn"
                    android:icon="@drawable/ic_device_hub_black_24dp"
                    android:title="@string/menu_node" />
                <item
                    android:id="@+id/nav_cm_mn"
                    android:icon="@drawable/icon_onu"
                    android:title="@string/menu_cablemodem" />
            </menu>
        </item>
    </group>
    <item android:title="@string/title_drawer_3">
        <menu>
            <item
                android:id="@+id/id_user"
                android:icon="@drawable/ic_supervisor_account"
                android:title="" />
            <item
                android:id="@+id/id_branch_user"
                android:icon="@drawable/ic_account_balance"
                android:title="" />
            <item
                android:id="@+id/nav_signOut"
                android:iconTint="@color/colorRed"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_sigout"/>
        </menu>
    </item>
    <item android:title="@string/title_drawer_4">
        <menu>
            <item
                android:id="@+id/nav_email_support"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="Email" />
            <item
                android:id="@+id/id_phone"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="Hotline" />

        </menu>
    </item>
</menu>
