<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_docsis_mb"
    app:startDestination="@id/nav_docsis_doc">
    <fragment
        android:id="@+id/nav_node_mb"
        android:name="com.example.monitordocsis.systemdocsis_mb.Node.FragmentNode"
        android:label="@string/menu_node"
        tools:layout="@layout/fragment_node" />

    <fragment
        android:id="@+id/nav_cm_mb"
        android:name="com.example.monitordocsis.systemdocsis_mb.CableModem.FragmentCablemodem"
        android:label="@string/menu_cablemodem"
        tools:layout="@layout/fragment_cablemodem" />

    <fragment
        android:id="@+id/nav_node_mn"
        android:name="com.example.monitordocsis.systemdocsis_mn.Node.FragmentNode"
        android:label="@string/menu_node"
        tools:layout="@layout/fragment_node" />

    <fragment
        android:id="@+id/nav_cm_mn"
        android:name="com.example.monitordocsis.systemdocsis_mn.CableModem.FragmentCablemodem"
        android:label="@string/menu_cablemodem"
        tools:layout="@layout/fragment_cablemodem" />
    <fragment
        android:id="@+id/nav_docsis_doc"
        android:name="com.example.monitordocsis.ui.document.FragmentDocsisDoc"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />


</navigation>