<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#022D4E"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:srcCompat="@drawable/logovtvcab" />

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_welcome"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#D803A9F4"
                android:textColorHint="#B0FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#D803A9F4"
                android:textColorHint="#B0FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#D803A9F4"
                android:textColorHint="#B0FFFFFF"
                android:textColorLink="#FFFFFF" />
            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#FFFFFF"
                android:text="Nhớ tài khoản đăng nhập">

            </CheckBox>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_login"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_marginLeft="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#03A9F4"
                    android:padding="10dp"
                    android:text="@string/btn_login" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>